--- a/MilitaryProject/MilitaryProject/Views/Brigade/CreateBrigade.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/CreateBrigade.cshtml
@@ -1,4 +1,5 @@
-﻿@model MilitaryProject.Domain.ViewModels.Brigade.BrigadeViewModel
+﻿@using MilitaryProject.Domain.ViewModels.Brigade
+@model BrigadeViewModel
 
 @{
     ViewData["Title"] = "Create Brigade";
@@ -10,7 +11,7 @@
             <div class="card">
                 <h1 class="card-header text-center">Create Brigade</h1>
                 <div class="card-body">
-                    <form asp-controller="Brigade" asp-action="Create" method="post">
+                    <form asp-controller="Brigade" asp-action="CreateBrigade" method="post">
                         <div class="form-group">
                             <label asp-for="Name">Name:</label>
                             <input asp-for="Name" class="form-control" />
