--- a/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigade.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigade.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<MilitaryProject.Domain.ViewModels.Brigade.BrigadeViewModel>
+﻿@using MilitaryProject.Domain.Entity
+@using MilitaryProject.Domain.ViewModels.Brigade
+@model List<Brigade>
 
 @{
     ViewData["Title"] = "Brigades";
@@ -21,8 +23,8 @@
                     {
                         <tr>
                             <td>@brigade.Name</td>
-                            <td><a asp-controller="Brigade" asp-action="Edit" asp-route-id="@brigade.Id">Edit</a></td>
-                            <td><a asp-controller="Brigade" asp-action="Delete" asp-route-id="@brigade.Id">Delete</a></td>
+                            <td><a asp-controller="Brigade" asp-action="Edit" asp-route-id="@brigade.ID">Edit</a></td>
+                            <td><a asp-controller="Brigade" asp-action="Delete" asp-route-id="@brigade.ID">Delete</a></td>
                         </tr>
                     }
                 </tbody>
