--- a/MilitaryProject/MilitaryProject/Views/Brigade/UpdateBrigade.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/UpdateBrigade.cshtml
@@ -11,7 +11,7 @@
                 <h1 class="card-header text-center">Edit Brigade</h1>
                 <div class="card-body">
                     <form asp-controller="Brigade" asp-action="Edit" method="post">
-                        <input type="hidden" asp-for="Id" />
+                        <input type="hidden" asp-for="ID" />
                         <div class="form-group">
                             <label asp-for="Name">Name:</label>
                             <input asp-for="Name" class="form-control" />
