--- a/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigade.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigade.cshtml
@@ -3,7 +3,7 @@
 @model List<Brigade>
 
 @{
-    ViewData["Title"] = "Brigades";
+    ViewData["Title"] = "GetById";
 }
 
 <div class="container mt-5">
