--- a/MilitaryProject/MilitaryProject/Views/Brigade/CreateBrigade.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/CreateBrigade.cshtml
@@ -16,6 +16,18 @@
                             <label asp-for="Name">Name:</label>
                             <input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>
+
+                            <label asp-for="CommanderName">Commander Name:</label>
+                            <input asp-for="CommanderName" class="form-control" />
+                            <span asp-validation-for="CommanderName" class="text-danger"></span>
+
+                            <label asp-for="EstablishmentDate">Establishment date:</label>
+                            <input asp-for="EstablishmentDate" class="form-control" />
+                            <span asp-validation-for="EstablishmentDate" class="text-danger"></span>
+
+                            <label asp-for="Location">Location:</label>
+                            <input asp-for="Location" class="form-control" />
+                            <span asp-validation-for="Location" class="text-danger"></span>
                         </div>
                         <button type="submit" class="btn btn-primary mt-3">Create</button>
                     </form>
