--- a/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigades.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigades.cshtml
@@ -14,8 +14,9 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th></th>
-                        <th></th>
+                        <th>Details</th>
+                        <th>Edit</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -23,8 +24,9 @@
                     {
                         <tr>
                             <td>@brigade.Name</td>
-                            <td><a asp-controller="Brigade" asp-action="Edit" asp-route-id="@brigade.ID">Edit</a></td>
-                            <td><a asp-controller="Brigade" asp-action="Delete" asp-route-id="@brigade.ID">Delete</a></td>
+                            <td><a class="btn btn-outline-primary" asp-controller="Brigade" asp-action="GetBrigade" asp-route-id="@brigade.ID">Details</a></td>
+                            <td><a class="btn btn-primary" asp-controller="Brigade" asp-action="UpdateBrigade" asp-route-id="@brigade.ID">Edit</a></td>
+                            <td><a class="btn btn-danger" asp-controller="Brigade" asp-action="DeleteBrigade" asp-route-id="@brigade.ID">Delete</a></td>
                         </tr>
                     }
                 </tbody>
