auth & brigades unit tests

--- a/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigades.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigades.cshtml
@@ -11,6 +11,7 @@
         <div class="col-md-8">
             <h2 class="text-center">Brigades</h2>
             <table class="table">
+                <a class="btn btn-success" asp-controller="Brigade" asp-action="CreateBrigade">Create</a>
                 <thead>
                     <tr>
                         <th>Name</th>
