request crud logic implemented

--- a/MilitaryProject/MilitaryProject/Views/Weapon/CreateWeapon.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Weapon/CreateWeapon.cshtml
@@ -11,7 +11,7 @@
             <div class="card">
                 <h1 class="card-header text-center">Create Weapon</h1>
                 <div class="card-body">
-                    <form asp-controller="Weapon" asp-action="Create weapon" method="post">
+                    <form asp-controller="Weapon" asp-action="CreateWeapon" method="post" >
                         <div class="form-group">
                             <label asp-for="Name">Name:</label>
                             <input asp-for="Name" class="form-control" />
