--- a/MilitaryProject/MilitaryProject/Views/Weapon/UpdateWeapon.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Weapon/UpdateWeapon.cshtml
@@ -10,7 +10,7 @@
             <div class="card">
                 <h1 class="card-header text-center">Edit Weapon</h1>
                 <div class="card-body">
-                    <form asp-controller="Weapon" asp-action="Edit" method="post">
+                    <form asp-controller="Weapon" asp-action="UpdateWeapon" method="post">
                         <input type="hidden" asp-for="ID" />
                         <div class="form-group">
                             <label asp-for="Name">Name:</label>
