--- a/MilitaryProject/MilitaryProject/Views/Weapon/GetWeapons.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Weapon/GetWeapons.cshtml
@@ -29,8 +29,8 @@
                                 <td>@weapon.Type</td>
                                 <td>@weapon.Price</td>
                                 <td>@weapon.Weight</td>
-                                <td><a asp-controller="Weapon" asp-action="Edit" asp-route-id="@weapon.ID">Edit</a></td>
-                                <td><a asp-controller="Weapon" asp-action="Delete" asp-route-id="@weapon.ID">Delete</a></td>
+                                <td><a asp-controller="Weapon" asp-action="EditWeapon" asp-route-id="@weapon.ID">Edit</a></td>
+                                <td><a asp-controller="Weapon" asp-action="DeleteWeapon" asp-route-id="@weapon.ID">Delete</a></td>
                             </tr>
                     }
                 </tbody>
