--- a/MilitaryProject/MilitaryProject/Views/Request/UpdateRequest.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Request/UpdateRequest.cshtml
@@ -1,4 +1,6 @@
-﻿@model MilitaryProject.Domain.ViewModels.Request.RequestViewModel
+﻿﻿@using MilitaryProject.Domain.Entity
+@using MilitaryProject.Domain.ViewModels.Request
+@model Request
 
 @{
     ViewData["Title"] = "Edit Request";
