--- a/MilitaryProject/MilitaryProject/Views/Weapon/UpdateWeapon.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Weapon/UpdateWeapon.cshtml
@@ -1,4 +1,6 @@
-﻿@model MilitaryProject.Domain.ViewModels.Weapon.WeaponViewModel
+﻿﻿@using MilitaryProject.Domain.Entity
+@using MilitaryProject.Domain.ViewModels.Weapon
+@model Weapon
 
 @{
     ViewData["Title"] = "Edit Weapon";
