--- a/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigade.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/GetBrigade.cshtml
@@ -29,8 +29,8 @@
                         <td>@Model.CommanderName</td>
                         <td>@Model.EstablishmentDate</td>
                         <td>@Model.Location</td>
-                        <td><a class="btn btn-primary" asp-controller="Brigade" asp-action="UpdateBrigade" asp-route-id="@Model.ID">Edit</a></td>
-                        <td><a class="btn btn-danger" asp-controller="Brigade" asp-action="DeleteBrigade" asp-route-id="@Model.ID">Delete</a></td>
+                        <td><a class="btn btn-primary" asp-controller="Brigade" asp-action="Update" asp-route-id="@Model.ID">Edit</a></td>
+                        <td><a class="btn btn-danger" asp-controller="Brigade" asp-action="Delete" asp-route-id="@Model.ID">Delete</a></td>
                     </tr>
                 </tbody>
             </table>
