--- a/MilitaryProject/MilitaryProject/Views/Brigade/Update.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/Update.cshtml
@@ -12,7 +12,7 @@
             <div class="card">
                 <h1 class="card-header text-center">Edit Brigade</h1>
                 <div class="card-body">
-                    <form asp-controller="Brigade" asp-action="UpdateBrigade" method="post">
+                    <form asp-controller="Brigade" asp-action="Update" method="post">
                         <div class="form-group">
                             <label asp-for="Name">Name:</label>
                             <input asp-for="Name" class="form-control" />
