--- a/MilitaryProject/MilitaryProject/Views/Brigade/GetAll.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Brigade/GetAll.cshtml
@@ -11,7 +11,7 @@
         <div class="col-md-8">
             <h2 class="text-center">Brigades</h2>
             <table class="table">
-                <a class="btn btn-success" asp-controller="Brigade" asp-action="CreateBrigade">Create</a>
+                <a class="btn btn-success" asp-controller="Brigade" asp-action="Create">Create</a>
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -26,8 +26,8 @@
                         <tr>
                             <td>@brigade.Name</td>
                             <td><a class="btn btn-outline-primary" asp-controller="Brigade" asp-action="GetBrigade" asp-route-id="@brigade.ID">Details</a></td>
-                            <td><a class="btn btn-primary" asp-controller="Brigade" asp-action="UpdateBrigade" asp-route-id="@brigade.ID">Edit</a></td>
-                            <td><a class="btn btn-danger" asp-controller="Brigade" asp-action="DeleteBrigade" asp-route-id="@brigade.ID">Delete</a></td>
+                            <td><a class="btn btn-primary" asp-controller="Brigade" asp-action="Update" asp-route-id="@brigade.ID">Edit</a></td>
+                            <td><a class="btn btn-danger" asp-controller="Brigade" asp-action="Delete" asp-route-id="@brigade.ID">Delete</a></td>
                         </tr>
                     }
                 </tbody>
