--- a/MilitaryProject/MilitaryProject/Views/Request/GetRequests.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Request/GetRequests.cshtml
@@ -1,5 +1,6 @@
-﻿@using MilitaryProject.Domain.ViewModels.Request
-@model List<RequestViewModel>
+﻿@using MilitaryProject.Domain.Entity
+@using MilitaryProject.Domain.ViewModels.Request
+@model List<Request>
 
 @{
     ViewData["Title"] = "Requests";
@@ -10,31 +11,24 @@
         <div class="col-md-8">
             <h2 class="text-center">Requests</h2>
             <table class="table">
+                <a class="btn btn-success" asp-controller="Request" asp-action="Create">Create</a>
                 <thead>
                     <tr>
-                        <th>Brigade ID</th>
-                        <th>Weapon ID</th>
-                        <th>Ammunition ID</th>
-                        <th>Weapon Quantity</th>
-                        <th>Ammunition Quantity</th>
-                        <th>Message</th>
-                        <th>Request Status</th>
-                        <th></th>
+                        <th>Name</th>
+                        <th>Details</th>
+                        <th>Edit</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var request in Model)
                     {
-                            <tr>
-                                <td>@request.BrigadeID</td>
-                                <td>@request.WeaponID</td>
-                                <td>@request.AmmunitionID</td>
-                                <td>@request.WeaponQuantity</td>
-                                <td>@request.AmmunitionQuantity</td>
-                                <td>@request.Message</td>
-                                <td>@request.RequestStatus</td>
-                                <td><a asp-controller="Request" asp-action="DeleteRequest" asp-route-id="@request.ID">Delete</a></td>
-                            </tr>
+                                <tr>
+                                        <td>@request.ID</td>
+                                        <td><a class="btn btn-outline-primary" asp-controller="Request" asp-action="GetRequest" asp-route-id="@request.ID">Details</a></td>
+                                        <td><a class="btn btn-primary" asp-controller="Request" asp-action="Update" asp-route-id="@request.ID">Edit</a></td>
+                                        <td><a class="btn btn-danger" asp-controller="Request" asp-action="Delete" asp-route-id="@request.ID">Delete</a></td>
+                                </tr>
                     }
                 </tbody>
             </table>
