--- a/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
@@ -25,6 +25,15 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>                     
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Brigade" asp-action="GetAll">Brigades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Weapon" asp-action="GetWeapons">Weapons</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Request" asp-action="GetRequests">Requests</a>
                         </li>
                     </ul>
                 </div>
