MilitaryRoute crud realized

--- a/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Request" asp-action="GetRequests">Requests</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="MilitaryRoute" asp-action="GetAll">Military Routes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
