--- a/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="MilitaryRoute" asp-action="GetAll">Military Routes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Ammunition" asp-action="GetAll">Ammunitions</a>
+                        </li>
                     </ul>
                 </div>
             </div>
