--- a/MilitaryProject/MilitaryProject/Views/MilitaryRoute/Create.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/MilitaryRoute/Create.cshtml
@@ -13,7 +13,7 @@
                 <div class="card-body">
                     <form asp-controller="MilitaryRoute" asp-action="Create" method="post">
                         <div class="form-group">
-                            <label asp-for="VolunteerLastName">Volunteer LastName:</label>
+                            <label asp-for="VolunteerLastName">Volunteer lastname:</label>
                             <input asp-for="VolunteerLastName" class="form-control" />
                             <span asp-validation-for="VolunteerLastName" class="text-danger"></span>
                         </div>
