--- a/MilitaryProject/MilitaryProject/wwwroot/css/site.css
+++ b/MilitaryProject/MilitaryProject/wwwroot/css/site.css
@@ -16,3 +16,105 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.error_page {
+    margin: 0;
+}
+
+.error_bg {
+    background-color: #222;
+    width: 100%;
+    height: 100%;
+}
+
+.error_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 13%;
+}
+
+.first_error_column {
+    border: 1px solid gray;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 17%;
+    padding: 25px;
+}
+
+.second_error_column {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 36%;
+}
+
+.error_text {
+    font-size: 30px;
+    font-family: "Montserrat";
+    color: #111;
+    margin-bottom: 40px;
+    background-color: #f7ce50;
+    padding: 5px;
+    text-align: center;
+}
+
+.error_code {
+    font-size: 100px;
+    font-family: "Montserrat";
+    color: white;
+}
+
+.error_title {
+    font-size: 50px;
+    font-family: "Montserrat";
+    color: white;
+}
+
+.error_description {
+    font-size: 20px;
+    font-family: "Poppins";
+    color: white;
+}
+
+.error_back_button {
+    position: absolute;
+    z-index: 1;
+    margin-top: 195px;
+    padding: 15px 20px;
+    background: transparent;
+    border: 3px solid #f7ce50;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.readmore_text {
+    font-family: "Montserrat";
+    font-size: 22px;
+    z-index: 1;
+    color: white;
+    text-align: center;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.error_back_button::before {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: #f7ce50;
+    transition: left 0.3s ease-in-out;
+}
+
+.error_back_button:hover::before {
+    left: 0;
+}
+
+.error_back_button:hover .readmore_text {
+    color: black;
+}
