--- a/MilitaryProject/MilitaryProject/Views/User/SignUp.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/User/SignUp.cshtml
@@ -41,7 +41,7 @@
                     </form>
                 </div>
                 <div class="card-footer text-center">
-                    <p class="mb-0">Already have an account? <a asp-controller="User" asp-action="SignUp">Login</a></p>
+                    <p class="mb-0">Already have an account? <a asp-controller="User" asp-action="Login">Login</a></p>
                 </div>
             </div>
         </div>
