--- a/MilitaryProject/MilitaryProject/Views/User/Login.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/User/Login.cshtml
@@ -22,6 +22,11 @@
                             <input asp-for="Password" type="password" class="form-control">
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
+                        <div class="form-group mt-3">
+                            <label for="TwoFactorSecretKey">Secret Key:</label>
+                            <input asp-for="TwoFactorSecretKey" type="text" class="form-control">
+                            <span asp-validation-for="TwoFactorSecretKey" class="text-danger"></span>
+                        </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="RememberMe" name="RememberMe">
                             <label class="form-check-label" for="RememberMe">Remember me</label>
