--- a/MilitaryProject/MilitaryProject/Views/User/SignUp.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/User/SignUp.cshtml
@@ -37,6 +37,11 @@
                             <input asp-for="Age" type="number" class="form-control">
                             <span asp-validation-for="Age" class="text-danger"></span>
                         </div>
+                        <div class="form-group mt-3">
+                            <label for="TwoFactorSecretKey">Secret Key:</label>
+                            <input asp-for="TwoFactorSecretKey" type="text" class="form-control">
+                            <span asp-validation-for="TwoFactorSecretKey" class="text-danger"></span>
+                        </div>
                         <button type="submit" class="btn btn-primary mt-3">Register</button>
                     </form>
                 </div>
