--- a/MilitaryProject/MilitaryProject/Views/User/RestorePassword.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/User/RestorePassword.cshtml
@@ -1,17 +1,17 @@
 ﻿@using MilitaryProject.Domain.ViewModels.User;
-@model LoginViewModel
+@model RestorePasswordViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Restore Password";
 }
 
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <h1 class="card-header text-center">Login</h1>
+                <h1 class="card-header text-center">Restore Password</h1>
                 <div class="card-body">
-                    <form asp-controller="User" asp-action="Login">
+                    <form asp-controller="User" asp-action="RestorePassword">
                         <div class="form-group">
                             <label for="Email">Email:</label>
                             <input asp-for="Email" type="email" class="form-control">
@@ -21,17 +21,13 @@
                             <label for="Password">Password:</label>
                             <input asp-for="Password" type="password" class="form-control">
                             <span asp-validation-for="Password" class="text-danger"></span>
-                        </div>                      
-                        <div class="d-flex justify-content-between">
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="RememberMe" name="RememberMe">
-                                <label class="form-check-label" for="RememberMe">Remember me</label>
-                            </div>
-                            <div>
-                                <a asp-controller="User" asp-action="RestorePassword">Forgot your password?</a>
-                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary mt-3">Login</button>
+                        <div class="form-group mt-3">
+                            <label for="RepeatPassword">Repeat Password:</label>
+                            <input asp-for="RepeatPassword" type="password" class="form-control">
+                            <span asp-validation-for="RepeatPassword" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3">Send</button>
                     </form>
                 </div>
                 <div class="card-footer text-center">
