add ui to sign up / login

--- a/MilitaryProject/MilitaryProject/Views/Home/Index.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
     bool authenticated = User.Identity.IsAuthenticated;
+    <link rel="stylesheet" href="~/css/home.css" />
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to our Military App!</h1>
+    <p class ="display-3">We hope that this system will help you to effectively divide your equipment and it will structure the work of your team.</p>
 </div>
