--- a/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MilitaryProject.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/admin.css" asp-append-version="true" />
 </head>
 
 @{
@@ -48,7 +49,10 @@
                             <a class="nav-link text-dark" asp-controller="Ammunition" asp-action="GetAll">Ammunitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="UserItems" asp-action="GetAll">UserItems</a>
+                            <a class="nav-link text-dark" asp-controller="UserItems" asp-action="GetAll">User Items</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" asp-controller="Admin" asp-action="AdminPannel">Admin Pannel</a>
                         </li>
                     </ul>
                     @if (!auth)
